Closed Bug 1401945 Opened 8 years ago Closed 8 years ago

Crash in mozilla::layers::WebRenderLayerManager::RemoveUnusedAndResetWebRenderUserData

Categories

(Core :: Graphics: WebRender, defect, P1)

57 Branch
Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- unaffected
firefox56 --- unaffected
firefox57 --- disabled
firefox58 --- fixed

People

(Reporter: calixte, Assigned: ethlin)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, Whiteboard: [clouseau] [wr-mvp])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-09ca7075-a93f-4aa2-a297-55e850170920. ============================================================= There are 2 crashes (from the same installation) in nightly 57 with buildid 20170920100426. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1397375. [1] https://hg.mozilla.org/mozilla-central/rev?node=6b4ff36ca8a685c4dbbce4527b191149283e25c3
Flags: needinfo?(ethlin)
Whiteboard: [clouseau] → [clouseau] [wr-mvp] [triage]
Assignee: nobody → ethlin
Flags: needinfo?(ethlin)
Priority: -- → P2
Whiteboard: [clouseau] [wr-mvp] [triage] → [clouseau] [wr-mvp]
Comment on attachment 8910820 [details] Bug 1401945 - Do not use the WebRenderUserData after it's removed. https://reviewboard.mozilla.org/r/182286/#review187630
Attachment #8910820 - Flags: review+
Status: NEW → ASSIGNED
Priority: P2 → P1
Comment on attachment 8910820 [details] Bug 1401945 - Do not use the WebRenderUserData after it's removed. https://reviewboard.mozilla.org/r/182286/#review187650
Attachment #8910820 - Flags: review?(bugmail) → review+
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/880571f39048 Do not use the WebRenderUserData after it's removed. r=jrmuizel,kats
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: