Bug 1401945 - Do not use the WebRenderUserData after it's removed. r=jrmuizel,kats

MozReview-Commit-ID: AL8tO0ZxVkF